Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 3.4.0
-
ghx-label-3
Description
Repro steps:
- Issue only happens in debug build as apparently there is a DCHECK failing.
- You have to launch Impala with --log_level=3 option to increase the log level.
- Then running this query crashes Impala:
select inner_arr.ITEM.e from functional_orc_def.complextypestbl tbl, functional_orc_def.complextypestbl.nested_struct.c.d.ITEM inner_arr;
Backtrace (relevant part):
#7 0x000000000280c2b4 in impala::PrintPath[abi:cxx11](impala::TableDescriptor const&, std::vector<int, std::allocator<int> > const&) (tbl_desc=..., path=...) at /home/gaborkaszab/shadow/Impala-upstream/be/src/util/debug-util.cc:237 #8 0x0000000002a69eeb in impala::HdfsOrcScanner::ResolveColumns (this=0x10e79000, tuple_desc=..., selected_nodes=0x7fe54980a7d0, pos_slots=0x7fe54980a780) at /home/gaborkaszab/shadow/Impala-upstream/be/src/exec/hdfs-orc-scanner.cc:452 #9 0x0000000002a69cf7 in impala::HdfsOrcScanner::ResolveColumns (this=0x10e79000, tuple_desc=..., selected_nodes=0x7fe54980a7d0, pos_slots=0x7fe54980a780) at /home/gaborkaszab/shadow/Impala-upstream/be/src/exec/hdfs-orc-scanner.cc:449 #10 0x0000000002a6a547 in impala::HdfsOrcScanner::SelectColumns (this=0x10e79000, tuple_desc=...) at /home/gaborkaszab/shadow/Impala-upstream/be/src/exec/hdfs-orc-scanner.cc:497 #11 0x0000000002a67720 in impala::HdfsOrcScanner::Open (this=0x10e79000, context=0x7fe54980b260) at /home/gaborkaszab/shadow/Impala-upstream/be/src/exec/hdfs-orc-scanner.cc:237 #12 0x00000000029f19c9 in impala::HdfsScanNodeBase::CreateAndOpenScannerHelper (this=0xd280800, partition=0xaac3d80, context=0x7fe54980b260, scanner=0x7fe54980b258) at /home/gaborkaszab/shadow/Impala-upstream/be/src/exec/hdfs-scan-node-base.cc:874 #13 0x0000000002baab86 in impala::HdfsScanNode::ProcessSplit (this=0xd280800, filter_ctxs=..., expr_results_pool=0x7fe54980b500, scan_range=0xac59c00, scanner_thread_reservation=0x7fe54980b428) at /home/gaborkaszab/shadow/Impala-upstream/be/src/exec/hdfs-scan-node.cc:480 #14 0x0000000002baa28a in impala::HdfsScanNode::ScannerThread (this=0xd280800, first_thread=true, scanner_thread_reservation=8192) at /home/gaborkaszab/shadow/Impala-upstream/be/src/exec/hdfs-scan-node.cc:418 #15 0x0000000002ba95f2 in impala::HdfsScanNode::<lambda()>::operator()(void) const (__closure=0x7fe54980bc28) at /home/gaborkaszab/shadow/Impala-upstream/be/src/exec/hdfs-scan-node.cc:339
This DCHECK fails:
https://github.com/apache/impala/blob/a47700ed790c2415e52a85e40063bed53a7cb9e8/be/src/util/debug-util.cc#L237
Check failed: path[i] == 1 (5 vs. 1)
There was a similar issue recently, but here a different DCHECK fails:
https://issues.apache.org/jira/browse/IMPALA-9918