IMPALA-10703: Fix crash on reading ACID table while printing SchemaPath of tuple/slots.

While reading ACID ORC file, the SchemaPath from TupleDescriptor
or SlotDescriptor are converted to fully qualified path via
PrintPath on few codepaths. PrintPath needs non-canonical table
path though. For non-ACID table this will be same as SchemaPath
of tuple/slot. However for ACID tables, it will be different as
file schema and table schema are not same.
E.g., ACID table foo(id int) will look like following in file:

{
  operation: int,
  originalTransaction: bigInt,
  bucket: int,
  rowId: bigInt,
  currentTransaction: bigInt,
  row: struct<id: int>
}
So SchemaPath for id will [5, 0], but PrintPath would not
understand that. It needs to be converted into table path [1]
as table schema looks like this:

{
  row_id: struct < ...ACID Columns>
  id: int
}

Testing:
1. Manually ran queries against functional_orc_def.complextypestbl
   with log level 3. These queries were crashing earlier.
2. Ran existing regression tests on DEBUG build for few changes not
   behind VLOG(3).

Change-Id: Ib7f15c31e0f8fc5d90555d1f2d51313eaffeb074
Reviewed-on: http://gerrit.cloudera.org:8080/17658
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>